[metadata]
name = newdle
version = 1.0-dev
license = MIT
description = Open Source Collaborative enterprise meeting scheduling tool.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=CommonMark
author = Indico Team
author_email = indico-team@cern.ch
url = https://github.com/indico/newdle

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >= 3.7
install_requires =
    alembic==1.2.1
    faker==2.0.3
    Flask-Caching==1.7.2
    flask-marshmallow==0.10.1
    flask-migrate==2.5.2
    Flask-Multipass[authlib]==0.3.1
    Flask-SQLAlchemy==2.4.4
    flask-url-map-serializer==0.0.1
    Flask==1.1.1
    icalendar==4.0.7
    itsdangerous==1.1.0
    Jinja2==2.10.3
    marshmallow-enum==1.5.1
    marshmallow-sqlalchemy==0.19.0
    marshmallow==3.2.1
    psycopg2==2.8.4
    python-dotenv==0.10.3
    pytz
    requests==2.22.0
    SQLAlchemy==1.3.10
    webargs==5.5.2
    Werkzeug==0.16.0

[options.extras_require]
dev =
    black>=20.8b1
    flake8
    flake8-quotes
    flask-shell-ipython
    ipython
    isort>=5.0.3
    pytest
    pytest-mock
    pytest-cov
    pytest-snapshot
    wheel
exchange = exchangelib
cern = Flask-Multipass-CERN>=1.0.dev4



[flake8]
exclude=newdle/client,__pycache__
max-line-length=89

inline-quotes = single
multiline-quotes = single
docstring-quotes = double
avoid-escape = true

per-file-ignores =
    newdle/vendor/django_mail/**/*.py:Q
