[metadata]
name = newdle
version = 1.0-dev
license = MIT
description = Open Source Collaborative enterprise meeting scheduling tool.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=CommonMark
author = Indico Team
author_email = indico-team@cern.ch
url = https://github.com/indico/newdle

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = ~=3.12
